--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-green-americanos-ui",
+  "name": "New Green Americanos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
